Bug fix for shopping cart icon on Safari

--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -87,11 +87,15 @@ h3 {
         position: absolute;
         left: 12px;
         bottom: 12px;
-        width: 36px;
-        height: 30px;
         background: white;
         box-shadow: 0 0 6px grey;
         cursor: pointer;
+
+        img {
+            width: 30px;
+            height: 30px;
+            padding: 3px;
+        }
     }
 }
 
@@ -244,8 +248,11 @@ h3 {
         left: auto;
         right: 0;
         bottom: -60px;
-        width: 48px;
-        height: 42px;
+
+        img {
+            width: 36px;
+            height: 36px;
+        }
     }
 
     .collections {
