--- a/styles/style.css
+++ b/styles/style.css
@@ -622,12 +622,15 @@ h3::after {
   position: absolute;
   left: 12px;
   bottom: 12px;
-  width: 36px;
-  height: 30px;
   background: white;
   -webkit-box-shadow: 0 0 6px grey;
           box-shadow: 0 0 6px grey;
   cursor: pointer;
+}
+.product-image button img {
+  width: 30px;
+  height: 30px;
+  padding: 3px;
 }
 
 .price {
@@ -884,8 +887,10 @@ h3::after {
     left: auto;
     right: 0;
     bottom: -60px;
-    width: 48px;
-    height: 42px;
+  }
+  .product-image button img {
+    width: 36px;
+    height: 36px;
   }
   .collections .collection1,
   .collections .collection4 {
